<resources>
    <string name="app_name">Infinit Visitas</string>

    <string name="title_activity_login">Acesso</string>
    <string name="title_activity_leads">Leads</string>
    <string name="title_activity_leads_qualificados">Leads</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="title_activity_cadastro_lead">Cadastro de Lead</string>
    <string name="title_activity_oportunidade">Oportunidade</string>
    <string name="title_activity_selecionar_cliente">Clientes</string>
    <string name="title_activity_consulta_vendas">Vendas</string>
    <string name="title_activity_contatos">Contatos</string>
    <string name="title_activity_scrolling">Consulta Follow-Up</string>
    <string name="title_activity_consulta_follow_up">Follow-Up</string>
    <string name="title_activity_cadastro_follow_up">Cadastro Follow-Up</string>

    <string name="business_name">Infinit Soluções</string>
    <string name="email_business">suporte@infinitsolucoes.com.br</string>

    <string name="action_search">Pesquisar</string>
    <string name="action_filter">Filtros</string>
    <string name="action_save">Salvar</string>
    <string name="action_logoff">Sair</string>
    <string name="action_settings">Settings</string>

    <string name="hint_nome_empresa">Nome da Empresa</string>
    <string name="hint_data_visita">Data</string>
    <string name="hint_hora_visita">Hora</string>
    <string name="hint_email">Email</string>
    <string name="hint_endereco_logradouro">Endereço</string>
    <string name="hint_sistema_atual">Sistema Atual</string>
    <string name="hint_endereco_numero">Nº</string>
    <string name="hint_endereco_bairro">Bairro</string>
    <string name="hint_endereco_municipio">Municipio</string>
    <string name="hint_endereco_uf">UF</string>
    <string name="hint_telefone">Telefone</string>
    <string name="hint_celular">Celular</string>
    <string name="hint_responsavel">Responsável</string>
    <string name="hint_observacao">Observação</string>
    <string name="hint_cpf_cnpj">Cpf/Cnpj</string>

    <string name="nivel_interesse_text">Nível de interesse: </string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="image_user_nav">Imagem Usuário</string>

    <string name="nav_agenda">Agenda</string>
    <string name="nav_lead">Leads</string>
    <string name="nav_lead_qualificado">Leads Qualificados</string>
    <string name="nav_oportunidade">Oportunidade</string>
    <string name="nav_venda">Venda</string>
    <string name="nav_contatos">Contatos</string>
    <string name="nav_sincronizar">Sincronizar</string>
    <string name="nav_filtros">Filtros</string>
    <string name="nav_sair">Sair</string>

    <string name="menu_edit">Editar</string>
    <string name="menu_delete">Excluir</string>

    <string name="empty_list">Não foi encontrado nenhum resultado</string>
    <string name="title_activity_cadastro_visitas">Visitas</string>
    <string name="menu_sell">Vender</string>
    <string name="geting_data">Obtendo dados</string>
    <string name="deleteing_data">Apagando registro.</string>
    <string name="hint_retorno_dias">Retornar depois de</string>
    <string name="title_activity_lead_qualificado">Qualificados</string>
</resources>
